# MarkerMap

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  markermap.yml  setup.cfg
RankCorr/picturedRocks/: __init__.py  rocks.py
notebooks/: Array_of_Markers.ipynb  CITE_seq.ipynb  CITE_seq_empty.ipynb  DemoSimpleInterface.ipynb  Mouse_Brain_Broad.ipynb  Mouse_Brain_Broad_empty.ipynb  Paul.ipynb  Paul_empty.ipynb  SummaryTable.ipynb  SummaryTable_empty.ipynb  Zeisel.ipynb  Zeisel_empty.ipynb  quick_start.ipynb  quick_start_benchmark.ipynb
notebooks/unmaintained/: CITE_seq.ipynb  Mouse_Brain_Broad.ipynb  Paul.ipynb  SummaryTable.ipynb  Zeisel.ipynb
scripts/: Summary_Graphs.py  benchmark_k.py  diffusion_map.py  display_results.py  evaluate_reconstruction.py  quick_start.py  quick_start_benchmark.py
src/: Benchmark_K.py  utils.py
src/RankCorr/: README.md  RankCorr-example.ipynb  performance.py
src/markermap/: other_models.py  smashpy_model.py  utils.py  vae_models.py
src/markermap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_benchmark.py  test_dataloaders.py  test_plots.py
