[metadata]
name = markermap
version = 1.0.0
author = Wilson Gregory, Nabeel Sarwar
author_email = wilson.g.gregory@gmail.com
description = Marker selection library for single-cell RNA-seq data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Computational-Morphogenomics-Group/MarkerMap
project_urls =
    Bug Tracker = https://github.com/Computational-Morphogenomics-Group/MarkerMap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = [
    'lassonet',
    'matplotlib',
    'numpy',
    'pandas',
    'pytorch-lightning',
    'scanpy',
    'seaborn',
    'smashpy',
    'torch',
    'umap-learn'
]

[options.packages.find]
where = src
